# RXArchEmulationOnWin64

./: CMakeLists.txt  ReadMe.md
Source/: main.cxx
Source/App/: Run.exe.cxx
Source/Data/: ParallelInParallelOut.hxx  PermanentSRAM.hxx  SRAM.hxx  SerialInParallelOut.hxx
Source/MainBoard/: MainBoard.hxx  SquareGenerator.hxx
Source/Mainboard/: SquareGenerator.hxx
Source/Processor/: CPU.hxx  Core.hxx
Source/Sync/: ClockGenerator.hxx  MachineController.hxx
